--- a/provision/roles/kubernetes/templates/daemon.json.j2
+++ b/provision/roles/kubernetes/templates/daemon.json.j2
@@ -1,5 +1,5 @@
 {
-  "fixed-cidr": "${DOCKER_CIRD}",
+  "fixed-cidr": "{{ DOCKER_CIRD }}",
   "bridge": "cbr0",
   "iptables": false,
   "ip-masq": false,
