--- a/provision/roles/kubernetes/templates/kube-dashboard.yml.j2
+++ b/provision/roles/kubernetes/templates/kube-dashboard.yml.j2
@@ -50,7 +50,7 @@ metadata:
   namespace: kube-system
 spec:
   type: ClusterIP
-  clusterIP: 10.0.0.3
+  clusterIP: {{ DASHBOARD_IP }}
   ports:
   - port: 80
     targetPort: 9090
