--- a/provision/roles/kubernetes/templates/kube-dns.yml.j2
+++ b/provision/roles/kubernetes/templates/kube-dns.yml.j2
@@ -69,7 +69,7 @@ spec:
           initialDelaySeconds: 3
           timeoutSeconds: 5
         args:
-        - --domain=${DNS_DOMAIN}.
+        - --domain={{ DNS_DOMAIN }}.
         - --dns-port=10053
         - --config-dir=/kube-dns-config
         - --v=0
@@ -109,7 +109,7 @@ spec:
         - -k
         - --cache-size=1000
         - --log-facility=-
-        - --server=/${DNS_DOMAIN}/127.0.0.1#10053
+        - --server=/{{ DNS_DOMAIN }}/127.0.0.1#10053
         - --server=/in-addr.arpa/127.0.0.1#10053
         - --server=/ip6.arpa/127.0.0.1#10053
         ports:
@@ -141,8 +141,8 @@ spec:
         args:
         - --v=0
         - --logtostderr
-        - --probe=kubedns,127.0.0.1:10053,kubernetes.default.svc.${DNS_DOMAIN},5,A
-        - --probe=dnsmasq,127.0.0.1:53,kubernetes.default.svc.${DNS_DOMAIN},5,A
+        - --probe=kubedns,127.0.0.1:10053,kubernetes.default.svc.{{ DNS_DOMAIN }},5,A
+        - --probe=dnsmasq,127.0.0.1:53,kubernetes.default.svc.{{ DNS_DOMAIN }},5,A
         ports:
         - containerPort: 10054
           name: metrics
@@ -167,7 +167,7 @@ metadata:
 spec:
   selector:
     k8s-app: kube-dns
-  clusterIP:  ${CLUSTERDNS_IP}
+  clusterIP:  {{ CLUSTERDNS_IP }}
   ports:
   - name: dns
     port: 53
