--- a/provision/files/provision/dynamic/templates/daemon.json.j2
+++ b/provision/files/provision/dynamic/templates/daemon.json.j2
@@ -1,5 +1,5 @@
 {
-  "fixed-cidr": "{{ DOCKER_CIRD }}",
+  "fixed-cidr": "{{ DOCKER_CIDR }}",
   "bridge": "cbr0",
   "iptables": false,
   "ip-masq": false,
