--- a/provision/files/provision/dynamic/templates/kube-apiserver.service.j2
+++ b/provision/files/provision/dynamic/templates/kube-apiserver.service.j2
@@ -8,7 +8,7 @@ After=kube-etcd.service
 Restart=always
 RestartSec=10
 ExecStart=/usr/bin/hyperkube apiserver \
---service-cluster-ip-range={{ PORTAL_CIRD }} \
+--service-cluster-ip-range={{ PORTAL_CIDR }} \
 --cert-dir=/var/lib/kubernetes \
 --insecure-bind-address=0.0.0.0 \
 --etcd-servers=http://127.0.0.1:2379 \
