--- a/provision/files/provision/dynamic/templates/vagrant-startup.sh.j2
+++ b/provision/files/provision/dynamic/templates/vagrant-startup.sh.j2
@@ -1,10 +1,10 @@
 #!/bin/sh
 # Configure masquerading, so containers can reach the internet
-iptables -t nat -A POSTROUTING -s {{NET_CIRD}} -o eth0 -j MASQUERADE
+iptables -t nat -A POSTROUTING -s {{NET_CIDR}} -o eth0 -j MASQUERADE
 
 # The virtual service ips should never get routed, if we don't drop them we might get into a "routing loop"
 # and even crash the NAT
-ip route add blackhole {{PORTAL_CIRD}}
+ip route add blackhole {{PORTAL_CIDR}}
 
 # Override the default nameserver, otherwise performance on OSX sucks
 #cat << EOF > /etc/resolv.conf
