--- a/provision/files/provision/dynamic/templates/kubelet.service.j2
+++ b/provision/files/provision/dynamic/templates/kubelet.service.j2
@@ -12,7 +12,7 @@ ExecStart=/usr/bin/hyperkube kubelet \
 --address=0.0.0.0 \
 --serialize-image-pulls=false \
 --cluster-dns={{ CLUSTERDNS_IP }} \
---cluster-domain={{ DNS_DOMAIN }} \
+--cluster-domain={{ CLUSTER_DOMAIN }} \
 --fail-swap-on=false
 Restart=always
 Type=notify
